Revert "update @simplex-chat/types"
This reverts commit da3f89866f01350db4ad265c4fe59ac45fa68b55.

--- a/packages/simplex-chat-client/types/typescript/package.json
+++ b/packages/simplex-chat-client/types/typescript/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@simplex-chat/types",
-  "version": "0.2.1",
+  "version": "6.5.0-beta.3",
   "description": "TypeScript types for SimpleX Chat bot libraries",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "publishConfig": {
     "access": "public",
