ci: better curl flags

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -617,9 +617,9 @@ jobs:
           mkdir "$INIT_DIR" "$RELEASE_DIR" && cd "$INIT_DIR"
 
           # Downlaod desktop release
-          curl -L "${URL}/${TAG}/simplex-desktop-ubuntu-22_04-x86_64.deb" -o linux.deb
-          curl -L "${URL}/${TAG}/simplex-desktop-macos-aarch64.dmg" -o macos-aarch64.dmg
-          curl -L "${URL}/${TAG}/simplex-desktop-macos-x86_64.dmg" -o macos-x64.dmg
+          curl --proto '=https' --tlsv1.2 -sSf -L "${URL}/${TAG}/simplex-desktop-ubuntu-22_04-x86_64.deb" -o linux.deb
+          curl --proto '=https' --tlsv1.2 -sSf -L "${URL}/${TAG}/simplex-desktop-macos-aarch64.dmg" -o macos-aarch64.dmg
+          curl --proto '=https' --tlsv1.2 -sSf -L "${URL}/${TAG}/simplex-desktop-macos-x86_64.dmg" -o macos-x64.dmg
 
           # Linux
           # -----
