--- a/packages/simplex-chat-nodejs/package.json
+++ b/packages/simplex-chat-nodejs/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@simplex-chat/types": "^0.3.0",
     "extract-zip": "^2.0.1",
+    "fast-deep-equal": "^3.1.3",
     "node-addon-api": "^8.5.0"
   },
   "devDependencies": {
