--- a/packages/simplex-chat-nodejs/package.json
+++ b/packages/simplex-chat-nodejs/package.json
@@ -49,5 +49,5 @@
     "url": "https://github.com/simplex-chat/simplex-chat/issues"
   },
   "homepage": "https://github.com/simplex-chat/simplex-chat/tree/stable/packages/simplex-chat-nodejs#readme",
-  "description": ""
+  "description": "SimpleX Chat Node.js library for chat bots"
 }
