--- a/packages/simplex-chat-nodejs/package.json
+++ b/packages/simplex-chat-nodejs/package.json
@@ -1,11 +1,16 @@
 {
   "name": "simplex-chat",
-  "version": "6.5.0-beta.4",
+  "version": "6.5.0-beta.4.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
+    "src",
+    "cpp",
     "dist",
-    "src"
+    "binding.gyp",
+    "tsconfig.json",
+    "docs",
+    "examples"
   ],
   "scripts": {
     "preinstall": "node src/download-libs.js",
