core: change msg_content_tag stored as blob to text

--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -275,6 +275,7 @@ library
           Simplex.Chat.Store.SQLite.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.SQLite.Migrations.M20251230_strict_tables
           Simplex.Chat.Store.SQLite.Migrations.M20260108_chat_indices
+          Simplex.Chat.Store.SQLite.Migrations.M20260121_msg_content_tag
   other-modules:
       Paths_simplex_chat
   hs-source-dirs:
