core: filter all messages with links in text when link content filter is used (#6591)
* core: change msg_content_tag stored as blob to text

* track if items have links and use has_link when searching for links (MCLink_ MsgContentTag is passed)

* fix test (broken in master)

* merge migrations, update api and schema

* minor fixes

* tests

* update plans

* update migrations

--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -126,6 +126,7 @@ library
           Simplex.Chat.Store.Postgres.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.Postgres.Migrations.M20251230_strict_tables
           Simplex.Chat.Store.Postgres.Migrations.M20260108_chat_indices
+          Simplex.Chat.Store.Postgres.Migrations.M20260122_has_link
   else
       exposed-modules:
           Simplex.Chat.Archive
@@ -275,6 +276,7 @@ library
           Simplex.Chat.Store.SQLite.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.SQLite.Migrations.M20251230_strict_tables
           Simplex.Chat.Store.SQLite.Migrations.M20260108_chat_indices
+          Simplex.Chat.Store.SQLite.Migrations.M20260122_has_link
   other-modules:
       Paths_simplex_chat
   hs-source-dirs:
